Finished Jupyter Notebook for Modle 10 Challenge

--- a/Homework/Module10/SurfsUp/climate_starter.ipynb
+++ b/Homework/Module10/SurfsUp/climate_starter.ipynb
@@ -226,7 +226,7 @@
     "plt.xlabel('Date')\n",
     "plt.title(\"Precipitation by Date\")\n",
     "plt.xticks(rotation=90, ha='right')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -373,9 +373,12 @@
    "source": [
     "# Design a query to find the most active stations (i.e. what stations have the most rows?)\n",
     "# List the stations and the counts in descending order.\n",
+    "\n",
+    "# Query the database\n",
     "activity = session.query(Measurement.station, func.count(Measurement.station)).group_by(Measurement.station).\\\n",
     "    order_by(func.count(Measurement.station).desc()).all()\n",
     "\n",
+    "# List the results\n",
     "for item in activity:\n",
     "    print(item)\n",
     "print(f\"The most active station is {activity[0][0]} with {activity[0][1]} measurements.\")"
@@ -399,12 +402,14 @@
    ],
    "source": [
     "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
+    "# Query the database\n",
     "station_summary = session.query(Measurement.station,\\\n",
     "                                func.min(Measurement.tobs),\\\n",
     "                                func.max(Measurement.tobs),\\\n",
     "                                func.avg(Measurement.tobs)).\\\n",
     "                    filter(Measurement.station == 'USC00519281').all()\n",
     "\n",
+    "# Print the results\n",
     "print(f\"The most active station ({station_summary[0][0]}) \\nrecorded a minimum temperature of {station_summary[0][1]}, \\na maximum temperature of {station_summary[0][2]}, \\nand an average temperature of {round(station_summary[0][3], 2)}\")"
    ]
   },
