Project 2 data cleaning finished

--- a/Homework/Module12/nosql-challenge/NoSQL_analysis.ipynb
+++ b/Homework/Module12/nosql-challenge/NoSQL_analysis.ipynb
@@ -686,7 +686,11 @@
     "print(\"The number of establishments in London with rating >= 4 is:\", establishments.count_documents(query_rating))\n",
     "\n",
     "# Display the first document in the results using pprint\n",
-    "pprint(results_rating[0])"
+    "pprint(results_rating[0])\n",
+    "\n",
+    "# NOTE: it appears there are data quality issues, as there exists a RatingValue within the data that has value \"A\",\n",
+    "# which is interpreted to be \"greater than or equal to 4\". The correct number should be 33, but this is due to\n",
+    "# an error in data typing, not in the query."
    ]
   },
   {
