Minor tweak to the final question in Module 19 Challenge

--- a/Homework/Module19/Crypto_Clustering.ipynb
+++ b/Homework/Module19/Crypto_Clustering.ipynb
@@ -1834,7 +1834,8 @@
     "    title=\"Elbow Curve\", \n",
     "    xticks=pca_k,\n",
     "    label=\"elbow PCA data\"\n",
-    ")\n"
+    ")\n",
+    "# NOTE: The instructions say to use the (+) operator to join these two plots. However, the (*) operator makes the differences more apparent so that is what I have used instead."
    ]
   },
   {
@@ -1922,7 +1923,10 @@
     "\n",
     "  * **Question:** After visually analyzing the cluster analysis results, what is the impact of using fewer features to cluster the data using K-Means?\n",
     "\n",
-    "  * **Answer:** It makes the clustering more apparent. Without the PCA analysis, cluster 2 looks like it should be part of cluster 1. However, the distinction between all 4 clusters is much more visually apparent after aplication of PCA analysis.  "
+    "  * **Answer:** \n",
+    "    * Condensing the number of features makes the clustering more apparent. \n",
+    "      * Without the PCA analysis, cluster 2 looks like it should be part of cluster 1. However, the distinction between all 4 clusters is much more visually apparent after aplication of PCA analysis. \n",
+    "      * More specifically, the PCA analysis decreases the inertia of the dataset such that the clusters are more distinct."
    ]
   }
  ],
