Minor update to scaling in module 19 challenge

--- a/Homework/Module19/Crypto_Clustering.ipynb
+++ b/Homework/Module19/Crypto_Clustering.ipynb
@@ -522,8 +522,7 @@
    "outputs": [],
    "source": [
     "# Use the `StandardScaler()` module from scikit-learn to normalize the data from the CSV file\n",
-    "scaler = StandardScaler()\n",
-    "scaled_data = scaler.fit_transform(df_market_data.values)"
+    "scaled_data = StandardScaler().fit_transform(df_market_data.values)"
    ]
   },
   {
