--- a/Homework/Module20/Credit_Risk/credit_risk_classification.ipynb
+++ b/Homework/Module20/Credit_Risk/credit_risk_classification.ipynb
@@ -10,7 +10,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "from sklearn.metrics import balanced_accuracy_score, confusion_matrix, classification_report"
+    "from sklearn.metrics import balanced_accuracy_score, confusion_matrix, classification_report\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "from collections import Counter"
    ]
   },
   {
@@ -372,9 +376,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the train_test_learn module\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "# Split the data using train_test_split\n",
     "# Assign a random_state of 1 to the function\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, \n",
@@ -413,9 +414,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the LogisticRegression module from SKLearn\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
     "model = LogisticRegression(random_state=1)\n",
@@ -573,9 +571,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the RandomOverSampler module form imbalanced-learn\n",
-    "from imblearn.over_sampling import RandomOverSampler\n",
-    "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
     "ros = RandomOverSampler(random_state=1)\n",
@@ -602,7 +597,6 @@
    ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "from collections import Counter\n",
     "Counter(y_res)"
    ]
   },
